# libre-q

./: .buildpacks  .coverage  .env.example  .gitignore  .gitleaksignore  .jscpd.json  .lycheeignore  .pre-commit-config.yaml  .zenodo.json  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  MIGRATION_PLAN_ADMIN_TO_OWNER.md  Makefile  Procfile  README.md  SECURITY.md  STUDY_VISUALIZATION_OVERHAUL_PLAN.md  TODO.md  backend_coverage.txt  docker-compose.yml  export_openapi.py  failing_methods.txt  frontend_coverage.txt  frontend_coverage_2.txt  frontend_coverage_3.txt  frontend_coverage_final.txt  lychee.toml  openapi.json  package-lock.json  package.json  pr_22.diff  pr_22_info.json  release-please-config.json  requirements.txt  scalingo.json
backend/: .coverage  .env.s3.example  Dockerfile  README.md  README_TESTING.md  check_alembic.py  check_data.py  check_db_schema.py  check_db_tables.py  check_participants.py  check_seed.py  check_submissions.py  check_tables.py  debug_list_studies.py  debug_list_ws.py  debug_study_state.py  debug_study_workspace.py  init_db.py  migrate_collaboration.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  seed.py  update_statements.py  update_study.py  verify_data_layer.py  vulture_whitelist.py
backend/alembic/: env.py
backend/alembic/versions/: 95948970fab0_migrate_admin_to_owner.py  b407fd8a7da0_add_member_owner_role.py  bf798fcf46a6_remove_consent_buttons.py
backend/app/: database.py  dependencies.py  limiter.py  main.py  models.py  resume_codes.py  schema_validation.py  schemas.py
backend/app/core/: config.py
backend/app/middleware/: errors.py  log_scrub.py  security.py  spa.py
backend/app/models/: __init__.py  analysis.py  base.py  concourse.py  participant.py  project.py  recruitment.py  study.py  twofa_email_otp.py  user.py
backend/app/routers/: __init__.py  audio.py  auth.py  logs.py  participants.py  submissions.py  test.py
backend/app/schemas/: __init__.py  analysis.py  audio.py  auth.py  concourses.py  participants.py  projects.py  recruitment.py  responses.py  studies.py  users.py  workspaces.py
backend/app/services/: admin_user_service.py  analysis_service.py  concourse_service.py  email_otp_service.py  export_service.py  memo_service.py  recruitment_service.py  storage_service.py  study_data_service.py  study_defaults.py  study_service.py  submission_service.py
backend/app/types/: __init__.py  wire.py
backend/app/utils/: audit.py  crypto.py  email.py  script_utils.py  security.py  study_flow.py
backend/data/: example-study.json
backend/db_migrations/versions/: 2347cad310fd_fix_last_step_reached_backfill.py  a7b3c9d12e45_add_resume_code.py  (+12 more)
backend/scripts/: README.md  backup_database.py  check_relationships.py  check_submissions.py  create_user.py  dump_openapi.py  ensure_schema.py  force_migrate.py  migrate.py  migrate_002_add_workspaces.py  migrate_add_study_updated_at.py  migrate_branding.py  migrate_missing_columns.py  migrate_participants.py  migrate_projects_config.py  migrate_projects_data.py  migrate_ui_labels.py  postdeploy.py  sync_study.py  validate_migration.py  verify_data_layer.py  verify_state_enum.py  verify_statement_sync.py
backend/tests/: conftest.py  test_admin_projects.py  test_admin_workspaces.py  test_api.py
(+869 files in other folders)
